--- a/index.html
+++ b/index.html
@@ -1,29 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/677e1ac1b8.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Spline+Sans:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Survey Form</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="background">
-        <video src="video/Pexels Videos 2022395.mp4" muted autoplay loop></video>
-        <div class="overlay"></div>
+      <video src="video/Pexels Videos 2022395.mp4" muted autoplay loop></video>
+      <div class="overlay"></div>
     </div>
     <!-- <div class="overlay"></div> -->
     <main id="main">
-        <h1 id="title" class="text-center">Music Fest Survey Form</h1>
-        <p id="description" class="text-center">Thank you for joining us for the Music Festival! Please fill up the form regarding your expirience.</p>
-        <form action="" id="survey-form">
-            <label for="name">Name:</label>
-            <input type="text" class="form-control" name="name" id="name" placeholder="Enter Your Name">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control" name="email" id="email" placeholder="Enter Your Email">
-            <label for="age">Age</label>
-            <input type="number" name="age" id="number" class="form-control" min="10" max="99" placeholder="Enter Your Age">
-        </form>
+      <!-- <div class="background">
+      <video src="video/Pexels Videos 2022395.mp4" muted autoplay loop></video>
+      <div class="overlay"></div>
+    </div> -->
+      <h1 id="title" class="text-center">Music Fest Survey Form</h1>
+      <p id="description" class="text-center">
+        Thank you for joining us for the Music Festival! PLease tell us about your expirience by filling up this form.
+      </p>
+      <form action="" id="survey-form">
+        <label for="name">Name:</label>
+        <input
+          type="text"
+          class="form-control"
+          name="name"
+          id="name"
+          placeholder="Enter Your Name"
+        />
+        <label for="email">Email:</label>
+        <input
+          type="email"
+          class="form-control"
+          name="email"
+          id="email"
+          placeholder="Enter Your Email"
+        />
+        <label for="age">Age</label>
+        <input
+          type="number"
+          name="age"
+          id="number"
+          class="form-control"
+          min="10"
+          max="99"
+          placeholder="Enter Your Age"
+        />
+        <label for="dropdown">What is your favorite genre of music?</label>
+        <select name="genre" id="dropdown" class="form-control" required>
+          <option disabled selected>Select favorite genre</option>
+          <option value="Rock">Rock</option>
+          <option value="Pop">Pop</option>
+          <option value="EDM">EDM</option>
+          <option value="Country">Country</option>
+          <option value="Hip Hop">Hip Hop</option>
+        </select>
+        <label>Please rate your expirience.</label>
+        <label for="five-star">
+          <input
+            type="radio"
+            name="rating"
+            id="five-star"
+            class="form-control"
+          />
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+        </label>
+        <label for="four-star">
+          <input
+            type="radio"
+            name="rating"
+            id="four-star"
+            class="form-control"
+          />
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+        </label>
+        <label for="three-star">
+          <input
+            type="radio"
+            name="rating"
+            id="three-star"
+            class="form-control"
+          />
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+        </label>
+        <label for="two-star">
+          <input
+            type="radio"
+            name="rating"
+            id="two-star"
+            class="form-control"
+          />
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+        </label>
+        <label for="one-star">
+          <input
+            type="radio"
+            name="rating"
+            id="one-star"
+            class="form-control"
+          />
+          <i class="fa fa-star" aria-hidden="true"></i>
+        </label>
+        <label for="comments">Any additional comments or suggestions?</label>
+        <textarea
+          name="comments"
+          id="comments"
+          cols="30"
+          rows="10"
+          placeholder="Enter your comments here....."
+          class="form-control"
+        ></textarea>
+        <input type="submit" value="Submit" id="submit" />
+      </form>
     </main>
-</body>
+  </body>
 </html>
